# thin-egress-app

./: .gitignore  .gitmodules  .pyup.yml  404.html  CONFIG.example  LICENSE.txt  Makefile  Makefile.config.example  NGAP-DEPLOY-README.MD  README.MD  index.html  main.tf  mkdocs.yml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg  setup_jwt_cookie.sh  variables.tf
.github/: pull_request_template.md
cloudformation/: thin-egress-app.yaml  thin-egress-app.yaml.j2
config/: bucket-map-template.yaml  bucket_map_example.yaml  private_buckets_example.yaml  public_buckets_example.yaml
configuration/: index.html
deploying/: index.html
docs/: CNAME  configuration.md  deploying.md  history.md  index.md  s3access.md  technical.md  troubleshooting.md  vision.md
lambda/: app.py  common.py  requirements.txt  requirements_tea.txt  tea_bumper.py  update_lambda.py  update_lamda.py
lambdacode/: app.py  requirements.txt  update_lambda.py
requirements/: constraints.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-make.in  requirements-make.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
src/: app.py  (+2 more)
src/tea-cli/: pyproject.toml
src/tea-cli/tea_cli/: __main__.py  deploy.py  main.py  selector.py
src/tea-cli/tea_cli/commands/: list_versions.py  policy_sandbox.py  quick_deploy.py
src/tea-cli/tests/: test_main.py
tea-cli/: pyproject.toml
tea-cli/tea_cli/: deploy.py  main.py
tea-cli/tea_cli/commands/: quick_deploy.py
(+68 files in other folders)
