[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tea-cli"
version = "0.1.3"
description = "TEA command line tool"
authors = ["Rohan Weeden <reweeden@alaska.edu>"]
license = "Apache-2.0"
packages = [{include = "tea_cli"}]

[tool.poetry.scripts]
tea = "tea_cli:main.main"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.163"
cryptography = "^46.0.1"
rain-api-core = {git = "https://github.com/asfadmin/rain-api-core.git", rev = "9637b7d"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
